// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSS vars injection codegen <script> w/ default export 1`] = `
"const __default__ = { setup() {} }
import { useCssVars as _useCssVars } from 'vue'
const __injectCSSVars__ = () => {
_useCssVars(_ctx => ({
  \\"xxxxxxxx-color\\": (_ctx.color)
}))}
const __setup__ = __default__.setup
__default__.setup = __setup__
  ? (props, ctx) => { __injectCSSVars__();return __setup__(props, ctx) }
  : __injectCSSVars__

export default __default__"
`;

exports[`CSS vars injection codegen <script> w/ default export in strings/comments 1`] = `
"
          // export default {}
          const __default__ = {}
        
import { useCssVars as _useCssVars } from 'vue'
const __injectCSSVars__ = () => {
_useCssVars(_ctx => ({
  \\"xxxxxxxx-color\\": (_ctx.color)
}))}
const __setup__ = __default__.setup
__default__.setup = __setup__
  ? (props, ctx) => { __injectCSSVars__();return __setup__(props, ctx) }
  : __injectCSSVars__

export default __default__"
`;

exports[`CSS vars injection codegen <script> w/ no default export 1`] = `
"const a = 1
const __default__ = {}
import { useCssVars as _useCssVars } from 'vue'
const __injectCSSVars__ = () => {
_useCssVars(_ctx => ({
  \\"xxxxxxxx-color\\": (_ctx.color)
}))}
const __setup__ = __default__.setup
__default__.setup = __setup__
  ? (props, ctx) => { __injectCSSVars__();return __setup__(props, ctx) }
  : __injectCSSVars__

export default __default__"
`;

exports[`CSS vars injection codegen should ignore comments 1`] = `
"import { useCssVars as _useCssVars, unref as _unref } from 'vue'

export default {
  name: 'anonymous',
  setup(__props, { expose }) {
  expose();

_useCssVars(_ctx => ({
  \\"xxxxxxxx-width\\": (width)
}))
const color = 'red';const width = 100
return { color, width }
}

}"
`;

exports[`CSS vars injection codegen w/ <script setup> 1`] = `
"import { useCssVars as _useCssVars, unref as _unref } from 'vue'

export default {
  name: 'anonymous',
  setup(__props, { expose }) {
  expose();

_useCssVars(_ctx => ({
  \\"xxxxxxxx-color\\": (color)
}))
const color = 'red'
return { color }
}

}"
`;

exports[`CSS vars injection codegen w/ <script setup> using the same var multiple times 1`] = `
"import { useCssVars as _useCssVars, unref as _unref } from 'vue'

export default {
  name: 'anonymous',
  setup(__props, { expose }) {
  expose();

_useCssVars(_ctx => ({
  \\"xxxxxxxx-color\\": (color)
}))

        const color = 'red'
        
return { color }
}

}"
`;

exports[`CSS vars injection generating correct code for nested paths 1`] = `
"const a = 1
const __default__ = {}
import { useCssVars as _useCssVars } from 'vue'
const __injectCSSVars__ = () => {
_useCssVars(_ctx => ({
  \\"xxxxxxxx-color\\": (_ctx.color),
  \\"xxxxxxxx-font_size\\": (_ctx.font.size)
}))}
const __setup__ = __default__.setup
__default__.setup = __setup__
  ? (props, ctx) => { __injectCSSVars__();return __setup__(props, ctx) }
  : __injectCSSVars__

export default __default__"
`;

exports[`CSS vars injection w/ <script setup> binding analysis 1`] = `
"import { useCssVars as _useCssVars, unref as _unref } from 'vue'
import { ref } from 'vue'
        
export default {
  name: 'anonymous',
  props: {
          foo: String
        },
  setup(__props, { expose }) {
  expose();

_useCssVars(_ctx => ({
  \\"xxxxxxxx-color\\": (color),
  \\"xxxxxxxx-size\\": (size.value),
  \\"xxxxxxxx-foo\\": (__props.foo)
}))

        const color = 'red'
        const size = ref('10px')
        
        
return { color, size, ref }
}

}"
`;

exports[`CSS vars injection w/ normal <script> binding analysis 1`] = `
"
      const __default__ = {
        setup() {
          return {
            size: ref('100px')
          }
        }
      }
      
import { useCssVars as _useCssVars } from 'vue'
const __injectCSSVars__ = () => {
_useCssVars(_ctx => ({
  \\"xxxxxxxx-size\\": (_ctx.size)
}))}
const __setup__ = __default__.setup
__default__.setup = __setup__
  ? (props, ctx) => { __injectCSSVars__();return __setup__(props, ctx) }
  : __injectCSSVars__

export default __default__"
`;
